tests/value/value.exp
Error ---------------------------------------------------------------------------------------------------- value.js:4:16

Cannot assign `o["x"]` to `y` because number [1] is incompatible with string [2]. [incompatible-type]

   value.js:4:16
   4| var y:string = o["x"];
                     ^^^^^^

References:
   value.js:2:6
   2|   x: 4,
           ^ [1]
   value.js:4:7
   4| var y:string = o["x"];
            ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- value.js:7:14

Cannot assign `"hello"` to `table["x"]` because string [1] is incompatible with number [2]. [incompatible-type]

   value.js:7:14
   7| table["x"] = "hello";
                   ^^^^^^^ [1]

References:
   value.js:6:27
   6| var table: { [_: string]: number } = {};
                                ^^^^^^ [2]



Found 2 errors
